# server-spec

./: README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: container.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/user/: __init__.py  register.py
backend/app/config/: setting.py
backend/app/core/: chroma_manager.py  llm_manager.py  logger.py  redis.py
backend/app/core/graph/example/: graph_orchestrator.py
backend/app/database/: session.py
backend/app/database/model/: log.py
backend/app/dto/: user.py
backend/app/middleware/: auth.py
backend/app/repository/: user.py
backend/app/schema/: user.py
backend/app/service/: user.py
backend/app/util/: id_generator.py
backend/data/: README.md
backend/migration/: README.md  env.py
backend/test/: README.md
backend/test/integration/: conftest.py  test_user_service.py
backend/test/unit/: conftest.py  test_user_service.py
